--- a/sudoku/CMakeLists.txt
+++ b/sudoku/CMakeLists.txt
@@ -19,6 +19,8 @@ set(PROJECT_SOURCES
         mainwindow.ui
         numberbutton.h
         numberbutton.cpp
+        sudokucontroller.h
+        sudokucontroller.cpp
 )
 
 set(ASSETS
