optimised mistake checking
- checks mistakes for last update only

--- a/sudoku/CMakeLists.txt
+++ b/sudoku/CMakeLists.txt
@@ -21,6 +21,8 @@ set(PROJECT_SOURCES
         numberbutton.cpp
         sudokucontroller.h
         sudokucontroller.cpp
+        backtrackingsolver.h
+        backtrackingsolver.cpp
 )
 
 set(ASSETS
